# silly-merchants-for-safe-hackathon

./: .cursorrules  .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  dev.sh  docker-compose.backend.prod.yml  docker-compose.backend.yml  docker-compose.frontend.prod.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.ts
examples/: run_multiplayer_game.py
frontend/: Dockerfile  Dockerfile.dev  next.config.js  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GameBanner.tsx  GameIntro.tsx  GamePanel.tsx
frontend/src/utils/: gameRunner.ts
scripts/: migrate.py  restructure.py
src/: App.tsx  cli.py  main.py
src/api/: __init__.py  server.py
src/api/events/: __init__.py  manager.py  types.py
src/app/: page.tsx
src/cli/: __init__.py  game_client.py
src/components/: Banner.tsx  GameDisplay.tsx  GameIntro.tsx  GamePlay.tsx  GameRunner.tsx  Terminal.tsx
src/core/: base_agent.py  config.py
src/services/: gameRunner.ts
src/spaces/: __init__.py
src/styles/: App.css  GameDisplay.css  GameRunner.css  Terminal.css
src/utils/: __init__.py  config.py  eventSource.ts  fileverse_client.py  json_utils.py  logger.py
tests/: conftest.py  test_fileverse.py  test_game.py  test_gemini_provider.py  test_merchants_1o1.py  test_sse_client.py
tests/api/: test_merchants_1o1.py
web/: Dockerfile
web_client/: package.json  tailwind.config.js
(+42 files in other folders)
